(executable
    (name ReveryTerminalUnitTestRunner)
    (public_name ReveryTerminalTestRunner)
    (modules ReveryTerminalUnitTestRunner)
    (package revery-terminal-test)
    (libraries
            rely.lib
            ReveryTerminal
            Lib_Test
            VTerm_Test
            reason-native-crash-utils.asan
            ))

