(library
    (name Pty)
    (public_name revery-terminal.pty)
    (flags (:include flags.sexp))
    (c_library_flags (:include c_library_flags.sexp))
    (c_names bindings))

(rule
    (targets c_library_flags.sexp flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))
