(library
    (name vterm)
    (public_name revery-terminal.vterm)
    (library_flags (:include flags.sexp))
    (c_library_flags (:include c_library_flags.sexp))
    (c_names bindings)
    (c_flags (:include c_flags.sexp)))

(rule
    (targets c_flags.sexp flags.sexp c_library_flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))
